--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: #111;
   line-height: 1.4;
+  cursor: url("icons8-cursor-24.png"), auto;
 }
 
 /* NAVIGATION */
@@ -100,7 +101,7 @@ body {
   background: #07b841;
   color: #fff;
   font-weight: bold;
-  cursor: pointer;
+  cursor: url("icons8-cursor-24.png"), auto;
 }
 
 /* FRUIT POP GAME AREA */
@@ -127,7 +128,7 @@ body {
 /* FRUIT ANIMATION */
 .fruit {
   position: absolute;
-  font-size: 2.7rem;
+  font-size: 1rem;
   pointer-events: none;
   user-select: none;
   animation: floatFade 1.2s linear forwards;
